# StaticSettings

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  DeclareTypes.h  MoreProperty.h  Property.h  Worker.cpp  Worker.h  main.cpp
lib/: CMakeLists.txt  StaticSettings.hpp  TypeRegister.hpp
